# sfc

./: .gitignore  CHANGELOG.md  Makefile  README.md  build.py  collected_output_p1.txt  install.ps1  install.sh  pyproject.toml
sfc/: __init__.py  __main__.py  app.py  clipboard.py  collector.py  config.py  patterns.py  updater.py  version.py
sfc/tui/: __init__.py  base.py  curses_tui.py  win_tui.py
