[tool.poetry]
name = "sfc"
version = "4.8.0"
description = "Smart File Collector - collect project files for AI context"
authors = ["Heysh1n"]
license = "MIT"
readme = "README.md"
packages = [{include = "sfc"}]
keywords = ["file-collector", "cli", "tui", "ai", "context", "llm"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.scripts]
sfc = "sfc.__main__:main"

[tool.poetry.urls]
Homepage = "https://github.com/Heysh1n/sfc"
Repository = "https://github.com/Heysh1n/sfc"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
